# University-Lab-FLCD

./: .gitignore
Lab-1/: Lexic.txt  Syntax.txt  Tokens.txt  a.txt
Lab-2/: CMakeLists.txt  main.cpp
Lab-3/: CMakeLists.txt
Lab-3/Lab-3/: CMakeLists.txt  Lab-3.cpp  Lab-3.h
Lab-3/Lab-3/Constants/: Scanner.cpp  Tokens.cpp
Lab-3/Lab-3/Data/: PIF_ST.out  err.txt  p1.txt  p2.txt  p3.txt  token.in
Lab-3/Lab-3/Errors/: LexicError.cpp
Lab-3/Lab-3/Models/Core/: BinarySearchTree.cpp  Node.cpp  Tuple.cpp
Lab-3/Lab-3/Models/Scanner/: Result.cpp  Scanner.cpp
Lab-3/Lab-3/Models/Storage/: ProgramInternalForm.cpp  SymbolTable.cpp
Lab-3/Lab-3/Models/Tokens/: TokenType.cpp  Tokens.cpp
Lab-3/Lab-3/Models/TokensIdentifier/: TokensIdentifier.cpp
Lab-3/Lab-3/Utils/: TextHelper.cpp
Lab-4/: Documentation.docx  Lab3.sln  Program.cs
Lab-4/Data/: input.txt
Lab-4/Lab-4/: CMakeLists.txt  Lab-4.cpp  Lab-4.h  in.txt
Lab-4/Lab-4/Models/: FiniteAutomata.cpp  InputSymbol.cpp  State.cpp  TransitionFunction.cpp
Lab-4/Models/: FiniteAutomata.cs  Transition.cs
Lab-4/Ui/: ConsoleUi.cs
Lab-8/: lang.lex  lex.yy.c  p1-output.txt  p1.txt  p2-output.txt  p2.txt
